--- a/css/main.css
+++ b/css/main.css
@@ -238,6 +238,71 @@ textarea {
 /*---end-header-nav*/
 /*---End-header*/
 
+/*---content-galery----*/
+.content-gallery a{
+	 color: #FF6600;
+	  }
+.content-gallery h3{
+	 margin: 10px 10px 0 10px;
+	 color:#FFF;
+	 font-family: 'Carrois Gothic SC', sans-serif;
+	 font-size:23px;
+	  letter-spacing:-1px;
+	  font-weight: bold;
+	  }
+
+	.boxgrid{
+			width: 331px;
+			height: 260px;
+			margin: 10px;
+			float: left;
+			background: #161613;
+			border: ridge 1px rgb(255, 255, 255);
+			overflow: hidden;
+			position: relative;
+			border-radius: 0.3em;
+			box-shadow: 0px 0px 10px rgb(192, 192, 192);
+			}
+
+	.cover boxcaption{
+		top:170px;
+	}
+				.boxgrid img{
+					position: absolute;
+					top: 0;
+					left: 0;
+					border: 0;
+				}
+				.boxgrid p{
+					padding: 0 10px;
+					color:#afafaf;
+					font-weight:bold;
+					font:10pt "Lucida Grande", Arial, sans-serif;
+				}
+
+			.boxcaption{
+				float: left;
+				position: absolute;
+				background: #000;
+				height: 100px;
+				width: 100%;
+				opacity: .8;
+				/* For IE 5-7 */
+				filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+				/* For IE 8 */
+				-MS-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+ 			}
+ 				.captionfull .boxcaption {
+ 					top: 260;
+ 					left: 0;
+ 				}
+ 				.caption .boxcaption {
+ 					top: 179px;
+ 					left: 0;
+ 				}
+
+		/*---end-content-gallery---*/
+
 
 
 
