--- a/css/main.css
+++ b/css/main.css
@@ -303,6 +303,50 @@ textarea {
 
 		/*---end-content-gallery---*/
 
+    /*---page-nations-----*/
+		/*-----pageing----*/
+
+ul.dc_pagination {
+	font: 12px 'Tahoma';
+	height: 100%;
+	list-style-type: none;
+	overflow: hidden;
+	padding: 0px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	margin: 21px 0px 40px 0px;
+
+}
+ul.dc_pagination li:first-child {
+	margin-left: 0px;
+}
+ul.dc_paginationA03 li a {
+	background: #FFFFFF;
+	border: solid 1px #DCDCDC;
+	border-radius: 3px;
+	color: #707070 !important;
+	-moz-border-radius: 3px;
+	padding: 6px 9px 6px 9px;
+	-webkit-border-radius: 3px;
+	color: #000000 !important;
+	display: block;
+	padding: 7px 10px 7px 10px;
+	text-decoration: none;
+	font-family: 'Carrois Gothic SC', sans-serif;
+}
+
+ul.dc_pagination li {
+	float: left;
+	margin: 0px;
+	margin-left: 5px;
+	padding: 0px;
+}
+ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
+	background: #365ebf;
+	color: #fff !important;
+
+}
+
 
 
 
