--- a/css/main.css
+++ b/css/main.css
@@ -347,6 +347,202 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 
 }
 
+/*---footer----*/
+.footer {
+	background: #264284; /* Old browsers */
+	background: -moz-linear-gradient(top,  #264284 0%, #365ebf 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#264284), color-stop(100%,#365ebf)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #264284 0%,#365ebf 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #264284 0%,#365ebf 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #264284 0%,#365ebf 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #264284 0%,#365ebf 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#264284', endColorstr='#365ebf',GradientType=0 ); /* IE6-9 */
+	border-top: 1px ridge rgb(255, 255, 255);
+	padding: 33px 0px;
+}
+.footer h3 {
+	font-family: 'Carrois Gothic SC', sans-serif;
+	font-size: 37px;
+	color: rgb(250, 250, 250);
+	text-align: center;
+}
+.footer p {
+	padding-top: 17px;
+	width: 55%;
+	font-family: 'Arial';
+	font-size: 14px;
+	color: rgb(255, 255, 255);
+	text-align: center;
+	line-height: 2;
+	margin: 0 auto;
+	font-family:Arial, Helvetica, sans-serif;
+	padding: 10px 18px 18px 18px;
+}
+.footerlinks {
+	text-align: center;
+	width: 27%;
+	margin: 0 auto;
+}
+.footerlinks ul li {
+	display: inline-block;
+	padding: 17px 10px;
+}
+/*footer1*/
+.footer1{
+	padding: 20px;
+	background: #353534;
+	border-top: 1px ridge rgba(22, 48, 148, 0.75);
+
+}
+.footer1 p{
+	text-align:center;
+}
+.footer1 p.link {
+	color: #eee;
+	font-size:13px;
+	font-family: 'Carrois Gothic SC', sans-serif;
+}
+.footer1 p.link a {
+	color: #eee;
+	text-decoration: none;
+	font-size:13px;
+}
+.footer1 p.link a:hover {
+	color:#fff;
+	text-decoration: underline;
+}
+/*---share----*/
+
+.share li{
+	display:inline-block;
+	color:#eee;
+	font-size:12px;
+	padding:3px;
+}
+.share li a{
+	display:block;
+}
+.social.fbook,
+.social.twitter,
+.social.tumblr,
+.social.delicious,
+.social.dribbble,
+.social.evernote,
+.social.stumbleupon,
+.social.technorit,
+.social.readit,
+.social.linkedin,
+.social.rss,
+.social.gplus,
+.social.pintrest,
+.social.slashdot,
+.social.mail,
+.social.ff{
+	width:40px;
+	height:40px;
+	border-radius: 8px;
+}
+.social{
+	display:inline-block;
+	background:url(../images/social-icons.png);
+
+}
+.social.fbook{
+	background-position:0 0;
+}
+.social.fbook:hover{
+	background-position: 0px 40px;
+}
+.social.twitter{
+	background-position: -40px 0px;
+}
+.social.twitter:hover{
+	background-position: -40px -40px;
+}
+.social.tumblr{
+	background-position: -80px 0px;
+}
+.social.tumblr:hover{
+	background-position: -80px -40px;
+}
+.social.delicious{
+	background-position: -120px 0px;
+}
+.social.delicious:hover{
+	background-position: -120px -40px;
+}
+.social.dribbble{
+	background-position: -160px 0px;
+}
+.social.dribbble:hover{
+	background-position: -160px -40px;
+}
+.social.evernote{
+	background-position: -200px 0px;
+}
+.social.evernote:hover{
+	background-position: -200px -40px;
+}
+.social.stumbleupon{
+	background-position: -240px 0px;
+}
+.social.stumbleupon:hover{
+	background-position: -240px -40px;
+}
+.social.technorit{
+	background-position: -280px 0px;
+}
+.social.technorit:hover{
+	background-position: -280px -40px;
+}
+.social.readit{
+	background-position: -320px 0px;
+}
+.social.readit:hover{
+	background-position: -320px -40px;
+}
+.social.linkedin{
+	background-position: -360px 0px;
+}
+.social.linkedin:hover{
+	background-position: -360px -40px;
+}
+.social.rss{
+	background-position: -400px 0px;
+}
+.social.rss:hover{
+	background-position: -400px -40px;
+}
+.social.gplus{
+	background-position: -440px 0px;
+}
+.social.gplus:hover{
+	background-position: -440px -40px;
+}
+.social.pintrest{
+	background-position: -480px 0px;
+}
+.social.pintrest:hover{
+	background-position: -480px -40px;
+}
+.social.slashdot{
+	background-position: -520px 0px;
+}
+.social.slashdot:hover{
+	background-position: -520px -40px;
+}
+.social.mail{
+	background-position: -560px 0px;
+}
+.social.mail:hover{
+	background-position: -560px -40px;
+}
+.social.ff{
+	background-position: -600px 0px;
+}
+.social.ff:hover{
+	background-position: -600px -40px;
+}
 
 
 
