--- a/css/main.css
+++ b/css/main.css
@@ -552,7 +552,49 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 	float:left;
 }
 
+/*------responive-design--------*/
 
+@media screen and (max-width: 1024px) {
+	.wrap{
+		width:90%;
+	}
+	.boxgrid {
+		width: 30.7%;
+		margin: 10px 19.8px 10px 0px;
+	}
+	.blog-img{
+		width:42%;
+		padding-top: 7px;
+	}
+	.blog-img {
+		width: 37%;
+	}
+	.services-sidebar{
+		width:23%;
+
+	}
+	.bloger-grid {
+		width: 100%;
+	}
+	.bloder-content{
+		width:73%;
+	}
+	.contact-form{
+		float:left;
+		width: 49%;
+		padding:0px;
+	}
+	.contact-form form textarea, .contact-form form input[type=text]{
+		width:92%;
+	}
+	.blog-box1 {
+		width: 94%;
+		padding: 20px;
+	}
+	.services-sidebar {
+		width: 24%;
+	}
+}
 
 
 
