Working on the responsive design / Media queries (max-width: 800px)
q
exit

--- a/css/main.css
+++ b/css/main.css
@@ -596,6 +596,46 @@ ul.dc_paginationA03 li a:hover, ul.dc_paginationA03 li a.current {
 	}
 }
 
+@media screen and (max-width: 800px) {
+	.wrap{
+		width:90%;
+	}
+
+	.blog-img {
+		width: 70%;
+	}
+	.services-sidebar {
+		width: 28%;
+	}
+	.bloger-content {
+		float: left;
+		width: 90%;
+		margin-left: 2%;
+		padding-top: 16px;
+	}
+	.blog-box1 {
+		width: 87%;
+		padding: 20px;
+	}
+	.bloger-content ul li {
+		display: inherit;
+	}
+	.product-grid, .last1 {
+		width: 23.9%;
+	}
+	.contact-form {
+		width:100%;
+	}
+	.map{
+		display:none;
+	}
+	.contact-form form textarea, .contact-form form input[type=text] {
+		width: 97%;
+	}
+	.contact-form form textarea{
+		resize:none;
+	}
+}
 
 
 
